Use hvm-core submodule instead.

--- a/commits.cfg
+++ b/commits.cfg
@@ -1,5 +1,5 @@
-fb5a2a98d4ec19e4b4a4898a8124fa4a76f87ee1
-a516b27
-460e3cc
-42d5ad1
-main
+compare-1-single-core-flag
+compare-2-before-dup-ref
+compare-3-before-ptr-refactor
+compare-4-ptr-refactor
+compare-5-modern-ptr-refactor
