--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.81"
+chrono = "0.4.35"
+clap = { version = "4.5.3", features = ["derive", "string"] }
+fs-err = "2.11.0"
 regex = "1.10.3"
+thiserror = "1.0.58"
 wait-timeout = "0.2.0"
